added user (model, migration, dto, handler, router, tests), added token (service, tests), added authentication and authorization.
